--- a/app/passengerDetails/PassengerForm.css
+++ b/app/passengerDetails/PassengerForm.css
@@ -2,7 +2,7 @@
   max-width: 800px;
   margin: 0 auto;
   padding: 30px;
-  background-color: #ffffff;
+  background: linear-gradient(to right, #f0f4ff, #d9eaff);/* Gradient background */
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
