--- a/app/tickets/Tickets.css
+++ b/app/tickets/Tickets.css
@@ -43,7 +43,7 @@
 .main-ticket {
   flex: 3;
   padding: 12px;
-  background-color: #fff;
+  background: linear-gradient(to right, #f0f4ff, #d9eaff);/* Gradient background */
   border-right: 1px dashed #ccc;
 }
 
@@ -96,7 +96,7 @@
 .ticket-stub {
   flex: 1;
   padding: 12px;
-  background-color: #f0f0f0;
+  background: linear-gradient(to right, #f0f4ff, #d9eaff);/* Gradient background */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -137,22 +137,25 @@
 }
 
 .action-button {
-  padding: 10px 20px;
-  font-size: 0.9em;
-  font-weight: bold;
-  color: #ffffff;
-  background-color: #1976d2;
+  background-color: #0070f3;
+  color: white;
   border: none;
-  border-radius: 4px;
+  padding: 12px 24px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  border-radius: 6px;
+  font-size: 1em;
+  margin-bottom: 30px;
+  margin-top: 20px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 .action-button:hover {
-  background-color: #1565c0;
+  background-color: #005bb5;
+  transform: translateY(-2px);
 }
 
 .action-button:focus {
   outline: none;
   box-shadow: 0 0 0 2px rgba(25, 118, 210, 0.3);
 }
+
