--- a/app/components/Testimonials.css
+++ b/app/components/Testimonials.css
@@ -8,7 +8,7 @@
 
 .testimonials h2 {
     font-size: 28px;
-    color: #3c47e9; /* Primary color */
+    color: #24577a;
     margin-bottom: 30px;
 }
 
@@ -90,7 +90,7 @@
 .read-more-btn {
     background-color: transparent; /* Button background */
     border: none; /* Remove border */
-    color: #3c47e9; /* Color of button text */
+    color: #24577a; /* Color of button text */
     cursor: pointer; /* Pointer cursor */
     margin-top: 10px; /* Margin above button */
     font-size: 14px; /* Button font size */
