--- a/app/components/FlightDeals.css
+++ b/app/components/FlightDeals.css
@@ -73,7 +73,7 @@
     font-size: 16px;
     font-weight: bold;
     color: #666; /* Gray color for the location */
-    margin: 0;
+    margin: 2px;
   }
   
   .deal-description {
