--- a/app/components/HeroSection.css
+++ b/app/components/HeroSection.css
@@ -49,7 +49,7 @@
     border: none;
     border-radius: 20px;
     background-color: transparent;
-    color: #24577a;
+    color: #3c47e9;
     cursor: pointer;
     font-size: 16px;
     font-weight: 500;
@@ -57,7 +57,7 @@
   }
   
   .type-button.active {
-    background-color: #24577a;
+    background-color: #3c47e9;
     color: white;
   }
   
@@ -120,7 +120,7 @@
   }
 
   .search-button {
-    background-color: /*#3c47e9*/ #24577a;
+    background-color:#3c47e9;
     color: white;
     border: none;
     padding: 12px 24px;
@@ -130,7 +130,7 @@
   }
   
   .search-button:hover {
-    background-color:/*#3c47e9*/ #24577a;
+    background-color:#5e66d7;
   }
 
   /* Add these styles for the alert */
