--- a/app/userProfile/UserProfile.css
+++ b/app/userProfile/UserProfile.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   gap: 30px;
   padding: 30px;
-  background-color: #e0f7fa; /* Light background for the whole container */
+  background: linear-gradient(to right, #f0f4ff, #d9eaff); /* Gradient background */
   border-radius: 8px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1); /* Soft shadow */
   max-width: 1200px;
@@ -53,6 +53,9 @@
 /* User Info Styles */
 .profile-section {
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .profile-section h3 {
@@ -60,6 +63,13 @@
   color: #2c3e50;
   border-bottom: 2px solid #e0e0e0;
   padding-bottom: 5px;
+  margin-bottom: 15px;
+}
+
+.profile-detail-row {
+  display: flex;
+  flex-direction: column;
+  gap: 10px; /* Add gap between profile details */
 }
 
 .profile-detail-row p {
@@ -151,7 +161,7 @@ button:hover {
 }
 
 .flights-box {
-  background-color: #e0f7fa;
+  background-color: #d9eaff; /* Gradient background */
   padding: 20px;
   border-radius: 8px;
   display: flex;
