--- a/app/components/PlacesToStay.css
+++ b/app/components/PlacesToStay.css
@@ -55,7 +55,7 @@
 .places-to-stay h2 {
   font-size: 36px; /* Larger heading for emphasis */
   font-weight: bold;
-  color: #3c47e9; /* Primary color */
+  color: #24577a; /* Primary color */
   margin-bottom: 40px;
   margin-top: -40px;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
@@ -71,13 +71,13 @@
 }
 
 .place-card:hover .place-description {
-  color: #3c47e9; /* Change color on hover */
+  color: #24577a; /* Change color on hover */
 }
 
 .place-name {
   font-weight: bold;
   font-size: 20px;
-  color: #3c47e9; /* Different color for country name */
+  color: #24577a; /* Different color for country name */
 }
 
 /* Keyframe for fade-in animation */
