--- a/app/components/HeroSection.css
+++ b/app/components/HeroSection.css
@@ -130,7 +130,7 @@
   }
   
   .search-button:hover {
-    background-color:#2f5066;
+    background-color:#4e83a7;
   }
 
   /* Add these styles for the alert */
