--- a/app/passengerDetails/PassengerForm.css
+++ b/app/passengerDetails/PassengerForm.css
@@ -129,7 +129,7 @@
 
 .add-passenger-button,
 .seat-selection-button {
-  background-color: #0070f3;
+  background-color: #24577a;
   color: white;
   border: none;
   padding: 12px 24px;
@@ -141,7 +141,7 @@
 
 .add-passenger-button:hover:not(:disabled),
 .seat-selection-button:hover:not(:disabled) {
-  background-color: #005bb5;
+  background-color: #4e83a7;
   transform: translateY(-2px);
 }
 
